# one-max-genetic-algorithm-rust

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust-ci.yml
src/: main.rs  one_max_genetic_algorithm.rs  results.rs  utils.rs
tests/: one_max_genetic_algorithm_test.rs  results_test.rs  utils_test.rs
